--- a/.env-local.sample
+++ b/.env-local.sample
@@ -1,15 +1,67 @@
-COMPOSE_FILE=docker-compose.yml:docker-compose-elk.yml:docker-compose-postgres.yml
-POSTGRES_DB_NAME=
-POSTGRES_DB_HOST=localhost
+COMPOSE_FILE=docker-compose.yml:docker-compose-postgres.yml:docker-compose-elk.yml
+#:docker-compose-geohealthcheck.yml:docker-compose-zeppelin.yml
+
+# Postgres
+POSTGRES_DB_NAME=geonetwork4
+POSTGRES_DB_HOST=postgres
 POSTGRES_DB_PASSWORD=
-POSTGRES_DB_USERNAME=
+POSTGRES_DB_USERNAME=geonetwork
 POSTGRES_DB_PORT=5432
-ES_HOST=elasticsearch:9200
-ES_PROTOCOL=http
-ES_USERNAME=
-ES_PASSWORD=
-KB_URL=http://kibana:5601
-SMTP=email-smtp.eu-west-1.amazonaws.com:465
+
+# Kibana
+KIBANA_URL=http://kibana:5601
+
+# SMTP
+SMTP=
 SMTPUSER=
 SMTPPWD=
-EMAILADDR=notifications@astuntechnology.com
+EMAILADDR=
+
+# ElasticSearch
+ES_URL=http://elasticsearch:9200
+ES_HOST=elasticsearch
+ES_PROTOCOL=http
+ES_USERNAME=
+ES_PREFIX=ea-int
+ES_PASSWORD=
+
+# Keycloak
+KEYCLOAK_DISABLE_TRUST_MANAGER=true
+KEYCLOAK_DB=keycloak
+KEYCLOAK_DB_HOST=postgres
+KEYCLOAK_DB_USER=keycloak
+KEYCLOAK_DB_SCHEMA=public
+KEYCLOAK_DB_PASSWORD=
+KEYCLOAK_ADMIN_USER=
+KEYCLOAK_ADMIN_PASSWORD=
+KEYCLOAK_AUTH_SERVER_URL=
+KEYCLOAK_REALM=geonetwork
+KEYCLOAK_CLIENT=gn-client
+KEYCLOAK_SECRET=
+
+# Geoserver
+GEOSERVER_DATA_DIR=/opt/geoserver/data_dir
+GEOWEBCACHE_CACHE_DIR=/opt/geoserver/data_dir/gwc
+GEOSERVER_ADMIN_PASSWORD=myawesomegeoserver
+GEOSERVER_ADMIN_USER=admin
+INITIAL_MEMORY=2G
+MAXIMUM_MEMORY=4G
+GS_VERSION=2.20.4
+GEOSERVER_PORT=8600
+
+# Geohealthcheck
+SQLALCHEMY_DATABASE_URI=postgresql://geonetwork:redacted@postgres:5432/geohealthcheck
+SCRIPT_NAME=/geohealthcheck
+
+GHC_RUNNER_IN_WEBAPP=False
+GHC_NOTIFICATIONS=True
+GHC_NOTIFICATIONS_VERBOSITY=True
+GHC_ADMIN_EMAIL=us@gmail.com
+GHC_NOTIFICATIONS_EMAIL=us@gmail.com,them@domain.com
+GHC_SMTP_SERVER=smtp.gmail.com
+GHC_SMTP_PORT=587
+GHC_SMTP_TLS=True
+GHC_SMTP_SSL=False
+GHC_SMTP_USERNAME=us@gmail.com
+GHC_SMTP_PASSWORD=the_passw
+GHC_LOG_LEVEL=20
