--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     restart: unless-stopped
     ports:
       - 8080:8080
+    user: 0:0
     environment:
       DATA_DIR: /catalogue-data
 
@@ -47,10 +48,10 @@ services:
       - ../iso19139.gemini23/src/main/config/translations/en-schema-iso19139.gemini23.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-schema-iso19139.gemini23.json
       - ../iso19139.gemini23/target/gn-schema-iso19139.gemini23-4.2.2-SNAPSHOT.jar:/var/lib/jetty/webapps/geonetwork/WEB-INF/lib/gn-schema-iso19139.gemini23-4.2.2-SNAPSHOT.jar
       # gemini 2.2
-      - ../iso19139.gemini22/src/main/plugin/iso19139.gemini22:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.gemini22
-      - ../iso19139.gemini22/src/main/config/translations/en-schema-iso19139.gemini22.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-schema-iso19139.gemini22.json
-      - ../iso19139.gemini22/target/schema-iso19139.gemini22-4.2.2-SNAPSHOT.jar:/var/lib/jetty/webapps/geonetwork/WEB-INF/lib/schema-iso19139.gemini22-4.2.2-SNAPSHOT.jar
-      - ../iso19139.gemini22/src/main/plugin/iso19139.gemini22/process/xml_gemini22gemini23-schemaupgrade.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/process/xml_gemini22gemini23-schemaupgrade.xsl
+      - ../iso19139.gemini22_GN3/src/main/plugin/iso19139.gemini22:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.gemini22
+      - ../iso19139.gemini22_GN3/src/main/config/translations/en-schema-iso19139.gemini22.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-schema-iso19139.gemini22.json
+      - ../iso19139.gemini22_GN3/target/schema-iso19139.gemini22-4.2.2-SNAPSHOT.jar:/var/lib/jetty/webapps/geonetwork/WEB-INF/lib/schema-iso19139.gemini22-4.2.2-SNAPSHOT.jar
+      - ../iso19139.gemini22_GN3/src/main/plugin/iso19139.gemini22/process/xml_gemini22gemini23-schemaupgrade.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/process/xml_gemini22gemini23-schemaupgrade.xsl
       # iso19139
       #- ./geonetwork/WEB-INF/data/config/schema_plugins/iso19139/index-fields/default.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/index-fields/default.xsl
       #- ./geonetwork/WEB-INF/data/config/schema_plugins/iso19139/convert/dcat.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/convert/dcat.xsl
@@ -82,7 +83,7 @@ services:
       - ./scotgov/WEB-INF/config-summary.xml:/var/lib/jetty/webapps/geonetwork/WEB-INF/config-summary.xml
       - ./scotgov/WEB-INF/data/data/resources/map/config-viewer.xml:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/resources/map/config-viewer.xml
       - ./scotgov/WEB-INF/data/data/resources/map/config-viewer-search.xml:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/resources/map/config-viewer-search.xml
-      - ./scotgov/WEB-INF/data/data/resources/images/logos:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/resources/images/harvesting
+      - ./scotgov/WEB-INF/data/data/resources/images/images/logos:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/resources/images/harvesting
       - ./scotgov/xsl/conversion/import/ESRI_ISO-to-GEMINI_23.xsl:/var/lib/jetty/webapps/geonetwork/xsl/conversion/import/ESRI_ISO-to-GEMINI_23.xsl
       - ./scotgov/xsl/conversion/import/MEDIN_2_GEMINI_22.xsl:/var/lib/jetty/webapps/geonetwork/xsl/conversion/import/MEDIN_2_GEMINI_22.xsl
       - ./scotgov/xsl/conversion/import/_to_gemini23.xsl:/var/lib/jetty/webapps/geonetwork/xsl/conversion/import/_to_gemini23.xsl
