--- a/.env-local.sample
+++ b/.env-local.sample
@@ -1,5 +1,5 @@
-COMPOSE_FILE=docker-compose.yml:docker-compose-postgres.yml:docker-compose-elk.yml
-#:docker-compose-geohealthcheck.yml:docker-compose-zeppelin.yml
+COMPOSE_FILE=docker-compose.yml:docker-compose-elk.yml
+#:docker-compose-geohealthcheck.yml:docker-compose-zeppelin.yml:docker-compose-postgres.yml
 
 # Postgres
 POSTGRES_DB_NAME=geonetwork4
