--- a/.env-local.sample
+++ b/.env-local.sample
@@ -1,6 +1,14 @@
 COMPOSE_FILE=docker-compose.yml:docker-compose-elk.yml
 #:docker-compose-geohealthcheck.yml:docker-compose-zeppelin.yml:docker-compose-postgres.yml
 
+# Geonetwork
+GN_HOST=geonetwork
+GN_PORT=8080
+
+# Datahub
+DH_HOST=localhost
+DH_PORT=${GN_PORT}
+
 # Postgres
 POSTGRES_DB_NAME=geonetwork4
 POSTGRES_DB_HOST=postgres
