further changes for microservices

--- a/.env-local.sample
+++ b/.env-local.sample
@@ -4,6 +4,9 @@ COMPOSE_FILE=docker-compose.yml:docker-compose-postgres.yml:docker-compose-elk.y
 # Geonetwork
 GN_HOST=geonetwork
 GN_PORT=8080
+GN_ADMIN_USER=admin
+GN_ADMIN_PASSWORD=
+
 
 # Datahub
 DH_HOST=localhost
@@ -79,6 +82,8 @@ GHC_SMTP_USERNAME=${SMTP_USERNAME}
 GHC_SMTP_PASSWORD=${SMTP_PASSWORD}
 GHC_LOG_LEVEL=20
 
-# Metricbeat
+# Metricbeat and Filebeat
 METRIC_HOST=postgres://${POSTGRES_DB_USERNAME}:${POSTGRES_DB_PASSWORD}@${POSTGRES_DB_HOST}:${POSTGRES_DB_PORT}/${POSTGRES_DB_NAME}?sslmode=disable
-NGINX_HOST=nginx
+NGINX_HOST=nginx:80
+METRIC_GN_USER=${GN_ADMIN_USER}
+METRIC_GN_PASSWORD=${GN_ADMIN_PASSWORD}
