--- a/docker-compose-monitoring.yml
+++ b/docker-compose-monitoring.yml
@@ -11,6 +11,8 @@ services:
       - NGINX_HOST=${NGINX_HOST}
       - ES_HOST=${ES_HOST}
       - ES_PORT=${ES_PORT}
+      - METRIC_GN_USER=${METRIC_GN_USER}
+      - METRIC_GN_PASSWORD=${METRIC_GN_PASSWORD}
     volumes:
       - ./metricbeat/metricbeat.yml:/usr/share/metricbeat/metricbeat.yml
       - ./metricbeat/modules.d:/usr/share/metricbeat/modules.d
@@ -31,6 +33,8 @@ services:
       - NGINX_HOST=${NGINX_HOST}
       - ES_HOST=${ES_HOST}
       - ES_PORT=${ES_PORT}
+      - METRIC_GN_USER=${METRIC_GN_USER}
+      - METRIC_GN_PASSWORD=${METRIC_GN_PASSWORD}
     volumes:
       - ./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml
       - ./filebeat/modules.d:/usr/share/filebeat/modules.d
