--- a/.env-local.sample
+++ b/.env-local.sample
@@ -1,36 +1,43 @@
-COMPOSE_FILE=docker-compose.yml:docker-compose-elk.yml
-#:docker-compose-geohealthcheck.yml:docker-compose-zeppelin.yml:docker-compose-postgres.yml
+COMPOSE_FILE=docker-compose.yml:docker-compose-postgres.yml:docker-compose-elk.yml:docker-compose-monitoring.yml
+#:docker-compose-geohealthcheck.yml:docker-compose-zeppelin.yml
 
 # Geonetwork
 GN_HOST=geonetwork
 GN_PORT=8080
+GN_ADMIN_USER=admin
+GN_ADMIN_PASSWORD=
+
 
 # Datahub
 DH_HOST=localhost
 DH_PORT=${GN_PORT}
 
 # Postgres
-POSTGRES_DB_NAME=geonetwork4
+POSTGRES_DB_NAME=
 POSTGRES_DB_HOST=postgres
 POSTGRES_DB_PASSWORD=
-POSTGRES_DB_USERNAME=geonetwork
-POSTGRES_DB_PORT=5432
+POSTGRES_DB_USERNAME=
+POSTGRES_DB_PORT=
 
 # Kibana
 KIBANA_URL=http://kibana:5601
 
 # SMTP
 SMTP=
-SMTPUSER=
-SMTPPWD=
-EMAILADDR=
+SMTP_USERNAME=
+SMTP_PASSWPORD=
+EMAIL_ADDR=
+SMTP_PORT=
+SMTP_TLS=
+SMTP_SSL=
 
 # ElasticSearch
 ES_URL=http://elasticsearch:9200
 ES_HOST=elasticsearch
 ES_PROTOCOL=http
+ES_PORT=9200
 ES_USERNAME=
-ES_PREFIX=ea-int
+ES_PREFIX=
 ES_PASSWORD=
 
 # Keycloak
@@ -50,26 +57,33 @@ KEYCLOAK_SECRET=
 # Geoserver
 GEOSERVER_DATA_DIR=/opt/geoserver/data_dir
 GEOWEBCACHE_CACHE_DIR=/opt/geoserver/data_dir/gwc
-GEOSERVER_ADMIN_PASSWORD=myawesomegeoserver
-GEOSERVER_ADMIN_USER=admin
+GEOSERVER_ADMIN_PASSWORD=
+GEOSERVER_ADMIN_USER=
 INITIAL_MEMORY=2G
 MAXIMUM_MEMORY=4G
 GS_VERSION=2.20.4
 GEOSERVER_PORT=8600
 
 # Geohealthcheck
-SQLALCHEMY_DATABASE_URI=postgresql://geonetwork:redacted@postgres:5432/geohealthcheck
+GEOHEALTHCHECK_DB=geohealthcheck
+SQLALCHEMY_DATABASE_URI=postgresql://${POSTGRES_DB_USERNAME}:${POSTGRES_DB_PASSWORD}@${POSTGRES_DB_HOST}:${POSTGRES_DB_PORT}/${GEOHEALTHCHECK_DB}
 SCRIPT_NAME=/geohealthcheck
 
 GHC_RUNNER_IN_WEBAPP=False
 GHC_NOTIFICATIONS=True
 GHC_NOTIFICATIONS_VERBOSITY=True
-GHC_ADMIN_EMAIL=us@gmail.com
-GHC_NOTIFICATIONS_EMAIL=us@gmail.com,them@domain.com
-GHC_SMTP_SERVER=smtp.gmail.com
-GHC_SMTP_PORT=587
-GHC_SMTP_TLS=True
-GHC_SMTP_SSL=False
-GHC_SMTP_USERNAME=us@gmail.com
-GHC_SMTP_PASSWORD=the_passw
+GHC_ADMIN_EMAIL=${EMAILADDR}
+GHC_NOTIFICATIONS_EMAIL=${EMAILADDR},them@domain.com
+GHC_SMTP_SERVER=${SMTP}
+GHC_SMTP_PORT=${SMTP_PORT}
+GHC_SMTP_TLS=${SMTP_TLS}
+GHC_SMTP_SSL=${SMTP_SSL}
+GHC_SMTP_USERNAME=${SMTP_USERNAME}
+GHC_SMTP_PASSWORD=${SMTP_PASSWORD}
 GHC_LOG_LEVEL=20
+
+# Metricbeat and Filebeat
+METRIC_HOST=postgres://${POSTGRES_DB_USERNAME}:${POSTGRES_DB_PASSWORD}@${POSTGRES_DB_HOST}:${POSTGRES_DB_PORT}/${POSTGRES_DB_NAME}?sslmode=disable
+NGINX_HOST=nginx:80
+METRIC_GN_USER=${GN_ADMIN_USER}
+METRIC_GN_PASSWORD=${GN_ADMIN_PASSWORD}
