--- a/.env-local.sample
+++ b/.env-local.sample
@@ -18,6 +18,7 @@ POSTGRES_DB_HOST=postgres
 POSTGRES_DB_PASSWORD=
 POSTGRES_DB_USERNAME=
 POSTGRES_DB_PORT=
+POSTGRES_DB_ROUSER=
 
 # Kibana
 KIBANA_URL=http://kibana:5601
