--- a/docker-compose-zeppelin.yml
+++ b/docker-compose-zeppelin.yml
@@ -3,28 +3,33 @@ version: '3'
 services:
   zeppelin:
     # image: apache/zeppelin:0.9.0
-    image: apache/zeppelin:0.10.0
+    #image: apache/zeppelin:0.10.0
+    image: public.ecr.aws/d7m3b2m9/ea-custom-zeppelin:latest
     # build:
     #   context: ./certs
     #   dockerfile: dockerfile.zeppelin
     container_name: zeppelin
     volumes: 
-      - ./zeppelin/zeppelin-notebook:/opt/zeppelin/notebook
-      - ./shiro-geonetwork/geonetwork-integration/target/testshiro-1.0-SNAPSHOT-jar-with-dependencies.jar:/opt/zeppelin/lib/testshiro-1.0-SNAPSHOT-jar-with-dependencies.jar
+      - ./zeppelin/zeppelin-notebook:/usr/local/tomcat/webapps/zeppelin/notebook
+      - ./shiro-geonetwork/geonetwork-integration/target/testshiro-1.0-SNAPSHOT-jar-with-dependencies.jar:/usr/local/tomcat/webapps/zeppelin/lib/testshiro-1.0-SNAPSHOT-jar-with-dependencies.jar
       - ./zeppelin/zeppelin-logs:/zeppelin/logs
-      - ./shiro-geonetwork/lib/postgresql-42.3.3.jar:/opt/zeppelin/lib/postgresql-42.3.3.jar
-      - ./shiro-geonetwork/conf/shiro.ini:/opt/zeppelin/conf/shiro.ini
-      - ./zeppelin/zeppelin-conf/interpreter-setting.json:/opt/zeppelin/interpreter/jdbc/interpreter-setting.json
-      #- ./zeppelin/zeppelin-conf/zeppelin-site.xml:/opt/zeppelin/conf/zeppelin-site.xml
+      - ./shiro-geonetwork/lib/postgresql-42.3.3.jar:/usr/local/tomcat/webapps/zeppelin/lib/postgresql-42.3.3.jar
+      - ./shiro-geonetwork/conf/shiro.ini:/usr/local/tomcat/webapps/zeppelin/conf/shiro.ini
+      - ./zeppelin/zeppelin-conf/interpreter-setting.json:/usr/local/tomcat/webapps/zeppelin/interpreter/jdbc/interpreter-setting.json
+      #- ./zeppelin/zeppelin-conf/interpreter.json:/usr/local/tomcat/webapps/zeppelin/conf/interpreter.json
+      - ./zeppelin/zeppelin-conf/zeppelin-site.xml:/usr/local/tomcat/webapps/zeppelin/conf/zeppelin-site.xml
+      #- ./zeppelin/zeppelin-jdbc-0.10.1.jar:/usr/local/tomcat/webapps/zeppelin/interpreter/jdbc/zeppelin-jdbc-0.10.1.jar
       #- ./certs/cacerts:/custom_keystore/cacerts
     environment:
-      ZEPPELIN_INTERPRETER_OUTPUT_LIMIT: 10490000
-      ZEPPELIN_INTERPRETER_GROUP_DEFAULT: jdbc
-      ZEPPELIN_INTERPRETER_DIR: /zeppelin/interpreter
-      ZEPPELIN_NOTEBOOK_DIR: /opt/zeppelin/notebook
-      ZEPPELIN_PORT: 8083
-      ZEPPELIN_ADDR: 0.0.0.0
-      HOSTNAME: 0.0.0.0
+      - "ZEPPELIN_INTERPRETER_OUTPUT_LIMIT=10490000"
+      - "ZEPPELIN_INTERPRETER_GROUP_DEFAULT=jdbc"
+      - "ZEPPELIN_NOTEBOOK_DIR=/opt/zeppelin/notebook"
+      - "ZEPPELIN_PORT=8083"
+      - "ZEPPELIN_ADDR=0.0.0.0"
+      - "JDBC_DB_URL=jdbc:postgresql://${POSTGRES_DB_HOST}:${POSTGRES_DB_PORT}/${POSTGRES_DB_NAME}" 
+      - "JDBC_DB_USER=${POSTGRES_DB_ROUSER}" 
+      - "JDBC_DB_PASSWORD=${POSTGRES_DB_PASSWORD}" 
+      - "HOSTNAME=0.0.0.0"
       # JAVA_OPTS:
       #   -Djavax.net.ssl.trustStore=/custom_keystore/cacerts -Djavax.net.ssl.trustStorePassword=changeit
     ports:
