corrected credentials for zeppelin

--- a/.env-local.sample
+++ b/.env-local.sample
@@ -19,6 +19,7 @@ POSTGRES_DB_PASSWORD=
 POSTGRES_DB_USERNAME=
 POSTGRES_DB_PORT=
 POSTGRES_DB_ROUSER=
+POSTGRES_DB_ROPASSWORD=
 
 # Kibana
 KIBANA_URL=http://kibana:5601
