--- a/docker-compose-monitoring.yml
+++ b/docker-compose-monitoring.yml
@@ -4,6 +4,7 @@ version: '3.1'
 services:
   metricbeat:
     image: docker.elastic.co/beats/metricbeat:7.11.1
+    container_name: metricbeat
     command: metricbeat -e -strict.perms=false
     restart: unless-stopped
     environment:
@@ -26,6 +27,7 @@ services:
 
   filebeat:
     image: docker.elastic.co/beats/filebeat:7.11.1
+    container_name: filebeat
     command: filebeat -e -strict.perms=false
     restart: unless-stopped
     environment:
