WIP: Changes relating to getting GeoNetwork 4.2 working with AWS OpenSearch
* Change to building local docker image based on tomcat rather than jetty to get around slf4j logging error
* Custom docker-entrypoint.sh that doesn't make assumptions about ElasticSearch creds/url/port
* Change to docker-compose files to reference `/usr/local/tomcat` rather than `/var/lib/jetty`
* A couple of geonetwork volume overrides commented out while we get this working

--- a/geonetwork/WEB-INF/config.properties
+++ b/geonetwork/WEB-INF/config.properties
@@ -12,14 +12,13 @@ usersavedselection.watchlist.searchurl=catalog.search#/search?_uuid={{filter}}
 # Define the link to each record sent by email by the watchlist notifier
 usersavedselection.watchlist.recordurl=api/records/{{index:_uuid}}
 
-# es.protocol=http
-# es.port=9200
-# es.host=localhost
+es.protocol=${ES_PROTOCOL}
+es.port=${ES_PORT}
+es.host=${ES_HOST}
 es.url=${ES_URL}
 es.username=${ES_USERNAME}
 es.password=${ES_PASSWORD}
-es.index.features=ea-ext-features
-#es.index.features=gn-features
+es.index.features=gn-features
 es.index.features.type=features
 # Define the number of decimals to apply when converting geometries to GeoJSON
 # Too high value means more volume. Adapt the value depending on the precision
@@ -29,15 +28,13 @@ es.index.features.numberOfDecimals=8
 # Force reduction of geometry precision based on the number of decimals
 es.index.features.applyPrecisionModel=true
 es.index.features.featureCommitInterval=250
-es.index.records=ea-ext-records
-#es.index.records=gn-records
+es.index.records=gn-records
 es.index.records.type=records
 es.index.records_public=
-es.index.searchlogs=ea-ext-searchlogs
-#es.index.searchlogs=gn-searchlogs
+es.index.searchlogs=gn-searchlogs
 es.index.searchlogs.type=searchlogs
 
-kb.url=http://localhost:5601
+kb.url=${KB_URL}
 
 es.index.checker.interval=0/5 * * * * ?
 
@@ -49,9 +46,11 @@ api.params.maxPageSize=20000
 api.params.maxUploadSize=100000000
 urlChecker.UserAgent=GeoNetwork Link Checker
 
+thesaurus.cache.maxsize=400000
+
 map.bbox.background.service=https://ows.terrestris.de/osm/service?SERVICE=WMS&amp;REQUEST=GetMap&amp;VERSION=1.1.0&amp;LAYERS=OSM-WMS&amp;STYLES=default&amp;SRS={srs}&amp;BBOX={minx},{miny},{maxx},{maxy}&amp;WIDTH={width}&amp;HEIGHT={height}&amp;FORMAT=image/png
 
 # Set to false to enable the services to draw map extents (region.getmap and {metadatauuid}/extents.png) accepting
 # urls for map services to provide the background layers. Otherwise the only allowed options are from the settings
 # configuration or a named bg layer from regionGetMapBackgroundLayers.
-metadata.extentApi.disableFullUrlBackgroundMapServices=false
+metadata.extentApi.disableFullUrlBackgroundMapServices=true
