--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,44 +1,33 @@
 FROM tomcat:8.5-jdk8-corretto
 
 ENV GN_FILE ./geonetwork/geonetwork.war
-ENV DATA_DIR=$CATALINA_HOME/webapps/geonetwork/WEB-INF/data
-ENV JAVA_OPTS="-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC"
 
-#Environment variables
-# ENV GN_VERSION 3.10.5
+ENV DATA_DIR /catalogue-data
+ENV JAVA_OPTS -Dorg.eclipse.jetty.annotations.AnnotationParser.LEVEL=OFF \
+        -Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true \
+        -Xms512M -Xss512M -Xmx2G -XX:+UseConcMarkSweepGC \
+        -Dgeonetwork.resources.dir=${DATA_DIR}/resources \
+        -Dgeonetwork.data.dir=${DATA_DIR} \
+        -Dgeonetwork.codeList.dir=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/config/codelist \
+        -Dgeonetwork.schema.dir=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/config/schema_plugins 
 
-# downgrade tls from 1.2 to 1.1
-# was related to cefas harvesting on EA INT but maybe not needed?
-#RUN sed -i 's/MinProtocol = TLSv1.2/MinProtocol = TLSv1/' /etc/ssl/openssl.cnf \
-#&& sed -i 's/CipherString = DEFAULT@SECLEVEL=2/CipherString = DEFAULT@SECLEVEL=1/' /etc/ssl/openssl.cnf
 
-RUN yum install -y unzip tar gzip
 
-WORKDIR $CATALINA_HOME/webapps
+RUN mkdir -p /${DATA_DIR} && \
+    mkdir -p /usr/local/tomcat/webapps/geonetwork && \
+    yum install -y unzip
 
-COPY ./$GN_FILE $CATALINA_HOME/webapps/$GN_FILE
+COPY ./docker-entrypoint.sh.local /geonetwork-entrypoint.sh
+RUN chmod +x /geonetwork-entrypoint.sh
 
-RUN mkdir -p geonetwork && \
-     unzip -e $GN_FILE -d geonetwork && \
-     rm $GN_FILE
 
-# Patch in log4j version 2.17
-RUN rm "${CATALINA_HOME}"/webapps/geonetwork/WEB-INF/lib/log4j-core-* && \
-    rm "${CATALINA_HOME}"/webapps/geonetwork/WEB-INF/lib/log4j-api-* && \
-    curl https://dlcdn.apache.org/logging/log4j/2.18.0/apache-log4j-2.18.0-bin.tar.gz -o /tmp/log4j2.tgz && \
-    mkdir /tmp/log4j2 && \
-    tar -xvzf /tmp/log4j2.tgz -C /tmp/log4j2 && \
-    cp /tmp/log4j2/apache-log4j-2.18.0-bin/log4j-core-2.18.0.jar "${CATALINA_HOME}"/webapps/geonetwork/WEB-INF/lib/ && \
-    cp /tmp/log4j2/apache-log4j-2.18.0-bin/log4j-api-2.18.0.jar "${CATALINA_HOME}"/webapps/geonetwork/WEB-INF/lib/ && \
-    rm -rf /tmp/log4j2*
+COPY $GN_FILE /usr/local/tomcat/webapps/geonetwork/geonetwork.war
 
-#Set geonetwork data dir
-COPY ./docker-entrypoint.sh.local /entrypoint.sh
+RUN  cd /usr/local/tomcat/webapps/geonetwork/ && \
+     unzip geonetwork.war && \
+     rm geonetwork.war
 
-RUN chmod +x /entrypoint.sh
-
-ENTRYPOINT ["/entrypoint.sh"]
-
+ENTRYPOINT ["/geonetwork-entrypoint.sh"]
 CMD ["catalina.sh", "run"]
 
 HEALTHCHECK --interval=1m --timeout=10s --retries=5 \
