--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,103 +9,103 @@ volumes:
 
 services:
   geonetwork:
-    image: geonetwork:latest
+    #image: geonetwork:latest
+    #image: public.ecr.aws/i7c2f1z3/scotgov-custom-geonetwork:latest
+    image: scotgov-custom-geonetwork:latest
     restart: unless-stopped
     container_name: geonetwork
     ports:
       - 8080:8080
-    user: 0:0
+    #user: 0:0
     environment:
       DATA_DIR: /catalogue-data
       JAVA_OPTS: 
         -Dorg.eclipse.jetty.annotations.AnnotationParser.LEVEL=OFF
         -Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true
         -Xms512M -Xss512M -Xmx2G -XX:+UseConcMarkSweepGC
-        -Dgeonetwork.resources.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/resources
-        -Dgeonetwork.data.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data
-        -Dgeonetwork.codeList.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/codelist
-        -Dgeonetwork.schema.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins
-
-      
-      ES_HOST: elasticsearch
-      ES_PROTOCOL: http
-      ES_PORT: 9200
-
-      KB_URL: http://kibana:5601
-
+        -Dgeonetwork.resources.dir=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/data/resources
+        -Dgeonetwork.data.dir=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
+        -Dgeonetwork.codeList.dir=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/config/codelist
+        -Dgeonetwork.schema.dir=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/config/schema_plugins
+      ES_HOST: ${ES_HOST}
+      ES_PROTOCOL: ${ES_PROTOCOL}
+      ES_PORT: ${ES_PORT}
+      ES_URL: ${ES_URL}
+      KB_URL: ${KB_URL}
       GEONETWORK_DB_TYPE: postgres
       GEONETWORK_DB_HOST: ${POSTGRES_DB_HOST}
-      GEONETWORK_DB_PORT: 5432
+      GEONETWORK_DB_PORT: ${POSTGRES_DB_PORT}
       GEONETWORK_DB_NAME: ${POSTGRES_DB_NAME}
       GEONETWORK_DB_USERNAME: ${POSTGRES_DB_USERNAME}
       GEONETWORK_DB_PASSWORD: ${POSTGRES_DB_PASSWORD}
       GEONETWORK_MICROSERVICESPROXY_TARGETURI: http://ogc-api-records-service:8080
   
-    
     volumes:
       # general overrides
       - geonetwork:/catalogue-data
-      - ./thesauri/external/thesauri/theme:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/codelist/external/thesauri/theme
-      - ./geonetwork/catalog/locales/en-admin.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-admin.json
+      - ./thesauri/external/thesauri/theme:/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/config/codelist/external/thesauri/theme
+      - ./geonetwork/catalog/locales/en-admin.json:/usr/local/tomcat/webapps/geonetwork/catalog/locales/en-admin.json
 
       # schema overrides
       # gemini 2.3
-      - ../iso19139.gemini23/src/main/plugin/iso19139.gemini23:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.gemini23
-      - ../iso19139.gemini23/src/main/config/translations/en-schema-iso19139.gemini23.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-schema-iso19139.gemini23.json
-      - ../iso19139.gemini23/target/schema-iso19139.gemini23-4.2.2-SNAPSHOT.jar:/var/lib/jetty/webapps/geonetwork/WEB-INF/lib/gn-schema-iso19139.gemini23-4.2.2-SNAPSHOT.jar
+      - ../iso19139.gemini23/src/main/plugin/iso19139.gemini23:/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.gemini23
+      - ../iso19139.gemini23/src/main/config/translations/en-schema-iso19139.gemini23.json:/usr/local/tomcat/webapps/geonetwork/catalog/locales/en-schema-iso19139.gemini23.json
+      - ../iso19139.gemini23/target/schema-iso19139.gemini23-4.2.2-SNAPSHOT.jar:/usr/local/tomcat/webapps/geonetwork/WEB-INF/lib/gn-schema-iso19139.gemini23-4.2.2-SNAPSHOT.jar
       # gemini 2.2
-      - ../iso19139.gemini22/src/main/plugin/iso19139.gemini22:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.gemini22
-      - ../iso19139.gemini22/src/main/config/translations/en-schema-iso19139.gemini22.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-schema-iso19139.gemini22.json
-      - ../iso19139.gemini22/target/schema-iso19139.gemini22-4.2.2-SNAPSHOT.jar:/var/lib/jetty/webapps/geonetwork/WEB-INF/lib/gn-schema-iso19139.gemini22-4.2.2-SNAPSHOT.jar
-      - ../iso19139.gemini22/src/main/plugin/iso19139.gemini22/process/xml_gemini22gemini23-schemaupgrade.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/process/xml_gemini22gemini23-schemaupgrade.xsl
+      - ../iso19139.gemini22/src/main/plugin/iso19139.gemini22:/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.gemini22
+      - ../iso19139.gemini22/src/main/config/translations/en-schema-iso19139.gemini22.json:/usr/local/tomcat/webapps/geonetwork/catalog/locales/en-schema-iso19139.gemini22.json
+      - ../iso19139.gemini22/target/schema-iso19139.gemini22-4.2.2-SNAPSHOT.jar:/usr/local/tomcat/webapps/geonetwork/WEB-INF/lib/gn-schema-iso19139.gemini22-4.2.2-SNAPSHOT.jar
+      - ../iso19139.gemini22/src/main/plugin/iso19139.gemini22/process/xml_gemini22gemini23-schemaupgrade.xsl:/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/process/xml_gemini22gemini23-schemaupgrade.xsl
       # iso19139
-      - ./geonetwork/WEB-INF/data/config/schema_plugins/iso19139/index-fields/default.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/index-fields/default.xsl
-      - ./geonetwork/WEB-INF/data/config/schema_plugins/iso19139/layout/tpl-rdf.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/layout/tpl-rdf.xsl
-      - ./geonetwork/WEB-INF/data/config/schema_plugins/iso19139/loc/eng/labels.xml:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/loc/eng/labels.xml
+      - ./geonetwork/WEB-INF/data/config/schema_plugins/iso19139/index-fields/default.xsl:/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/index-fields/default.xsl
+      - ./geonetwork/WEB-INF/data/config/schema_plugins/iso19139/layout/tpl-rdf.xsl:/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/layout/tpl-rdf.xsl
+      - ./geonetwork/WEB-INF/data/config/schema_plugins/iso19139/loc/eng/labels.xml:/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/loc/eng/labels.xml
       # scotgov specifics
       # persistent logo and favicon
-      - ./scotgov/WEB-INF/data/data/resources/images/images/logos/scotgov.png:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/resources/images/logos/48e84e1c-d7ac-4c19-a03f-2689dc991a51.png
-      - ./scotgov/WEB-INF/data/data/resources/images/images/logos/scotgov.png:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/resources/images/logos/favicon.png
+      - ./scotgov/WEB-INF/data/data/resources/images/images/logos/scotgov.png:/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/data/resources/images/logos/48e84e1c-d7ac-4c19-a03f-2689dc991a51.png
+      - ./scotgov/WEB-INF/data/data/resources/images/images/logos/scotgov.png:/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/data/resources/images/logos/favicon.png
       # misc
-      - ./scotgov/catalog/config/batch-process-cfg.json:/var/lib/jetty/webapps/geonetwork/catalog/config/batch-process-cfg.json
-      - ./scotgov/catalog/js/admin/DashboardController.js:/var/lib/jetty/webapps/geonetwork/catalog/js/admin/DashboardController.js
-      - ./scotgov/catalog/lib/angular/angular-sanitize.js:/var/lib/jetty/webapps/geonetwork/catalog/lib/angular/angular-sanitize.js
-      - ./scotgov/catalog/locales/en-custom.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-custom.json
+      - ./scotgov/catalog/config/batch-process-cfg.json:/usr/local/tomcat/webapps/geonetwork/catalog/config/batch-process-cfg.json
+      - ./scotgov/catalog/js/admin/DashboardController.js:/usr/local/tomcat/webapps/geonetwork/catalog/js/admin/DashboardController.js
+      #- ./scotgov/catalog/lib/angular/angular-sanitize.js:/usr/local/tomcat/webapps/geonetwork/catalog/lib/angular/angular-sanitize.js
+      - ./scotgov/catalog/locales/en-custom.json:/usr/local/tomcat/webapps/geonetwork/catalog/locales/en-custom.json
       # style
-      - ./scotgov/catalog/style/gn.less:/var/lib/jetty/webapps/geonetwork/catalog/style/gn.less   
-      - ./scotgov/catalog/style/gn_login.less:/var/lib/jetty/webapps/geonetwork/catalog/style/gn_login.less
-      - ./scotgov/catalog/style/gn_metadata.less:/var/lib/jetty/webapps/geonetwork/catalog/style/gn_metadata.less
-      - ./scotgov/catalog/style/srv_custom_style.less:/var/lib/jetty/webapps/geonetwork/catalog/style/srv_custom_style.less
-      - ./scotgov/catalog/views/default/less/gn_admin_default.less:/var/lib/jetty/webapps/geonetwork/catalog/views/default/less/gn_admin_default.less
-      - ./scotgov/catalog/views/default/less/gn_editor_default.less:/var/lib/jetty/webapps/geonetwork/catalog/views/default/less/gn_editor_default.less
-      - ./scotgov/catalog/views/default/templates/footer.html:/var/lib/jetty/webapps/geonetwork/catalog/views/default/templates/footer.html
-      - ./scotgov/catalog/templates/admin/settings/system.html:/var/lib/jetty/webapps/geonetwork/catalog/templates/admin/settings/system.html
+      - ./scotgov/catalog/style/gn.less:/usr/local/tomcat/webapps/geonetwork/catalog/style/gn.less   
+      - ./scotgov/catalog/style/gn_login.less:/usr/local/tomcat/webapps/geonetwork/catalog/style/gn_login.less
+      - ./scotgov/catalog/style/gn_metadata.less:/usr/local/tomcat/webapps/geonetwork/catalog/style/gn_metadata.less
+      - ./scotgov/catalog/style/srv_custom_style.less:/usr/local/tomcat/webapps/geonetwork/catalog/style/srv_custom_style.less
+      - ./scotgov/catalog/views/default/less/gn_admin_default.less:/usr/local/tomcat/webapps/geonetwork/catalog/views/default/less/gn_admin_default.less
+      - ./scotgov/catalog/views/default/less/gn_editor_default.less:/usr/local/tomcat/webapps/geonetwork/catalog/views/default/less/gn_editor_default.less
+      - ./scotgov/catalog/views/default/templates/footer.html:/usr/local/tomcat/webapps/geonetwork/catalog/views/default/templates/footer.html
+      - ./scotgov/catalog/templates/admin/settings/system.html:/usr/local/tomcat/webapps/geonetwork/catalog/templates/admin/settings/system.html
       # others   
-      - ./scotgov/WEB-INF/config-lucene.xml:/var/lib/jetty/webapps/geonetwork/WEB-INF/config-lucene.xml
-      - ./scotgov/WEB-INF/config-print/print-config.yaml:/var/lib/jetty/webapps/geonetwork/WEB-INF/config-print/print-config.yaml
-      - ./scotgov/WEB-INF/config-summary.xml:/var/lib/jetty/webapps/geonetwork/WEB-INF/config-summary.xml
-      - ./scotgov/WEB-INF/data/data/resources/map/config-viewer.xml:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/resources/map/config-viewer.xml
-      - ./scotgov/WEB-INF/data/data/resources/map/config-viewer-search.xml:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/resources/map/config-viewer-search.xml
-      - ./scotgov/WEB-INF/data/data/resources/images/images/logos:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/resources/images/harvesting
-      - ./scotgov/xsl/conversion/import/ESRI_ISO-to-GEMINI_23.xsl:/var/lib/jetty/webapps/geonetwork/xsl/conversion/import/ESRI_ISO-to-GEMINI_23.xsl
-      - ./scotgov/xsl/conversion/import/MEDIN_2_GEMINI_22.xsl:/var/lib/jetty/webapps/geonetwork/xsl/conversion/import/MEDIN_2_GEMINI_22.xsl
-      - ./scotgov/xsl/conversion/import/_to_gemini23.xsl:/var/lib/jetty/webapps/geonetwork/xsl/conversion/import/_to_gemini23.xsl
-      - ./scotgov/xsl/conversion/import/xml_gemini22gemini23.xsl:/var/lib/jetty/webapps/geonetwork/xsl/conversion/import/xml_gemini22gemini23.xsl
+      - ./scotgov/WEB-INF/config-lucene.xml:/usr/local/tomcat/webapps/geonetwork/WEB-INF/config-lucene.xml
+      - ./scotgov/WEB-INF/config-print/print-config.yaml:/usr/local/tomcat/webapps/geonetwork/WEB-INF/config-print/print-config.yaml
+      - ./scotgov/WEB-INF/config-summary.xml:/usr/local/tomcat/webapps/geonetwork/WEB-INF/config-summary.xml
+      - ./scotgov/WEB-INF/data/data/resources/map/config-viewer.xml:/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/data/resources/map/config-viewer.xml
+      - ./scotgov/WEB-INF/data/data/resources/map/config-viewer-search.xml:/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/data/resources/map/config-viewer-search.xml
+      - ./scotgov/WEB-INF/data/data/resources/images/images/logos:/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/data/resources/images/harvesting
+      - ./scotgov/xsl/conversion/import/ESRI_ISO-to-GEMINI_23.xsl:/usr/local/tomcat/webapps/geonetwork/xsl/conversion/import/ESRI_ISO-to-GEMINI_23.xsl
+      - ./scotgov/xsl/conversion/import/MEDIN_2_GEMINI_22.xsl:/usr/local/tomcat/webapps/geonetwork/xsl/conversion/import/MEDIN_2_GEMINI_22.xsl
+      - ./scotgov/xsl/conversion/import/_to_gemini23.xsl:/usr/local/tomcat/webapps/geonetwork/xsl/conversion/import/_to_gemini23.xsl
+      - ./scotgov/xsl/conversion/import/xml_gemini22gemini23.xsl:/usr/local/tomcat/webapps/geonetwork/xsl/conversion/import/xml_gemini22gemini23.xsl
       # dtime integration
-      - ./scotgov/catalog/js/CatController.js:/var/lib/jetty/webapps/geonetwork/catalog/js/CatController.js
-      - ./scotgov/catalog/views/default/templates/dtechtive.html:/var/lib/jetty/webapps/geonetwork/catalog/views/default/templates/dtechtive.html
-      - ./scotgov/catalog/views/default/templates/index.html:/var/lib/jetty/webapps/geonetwork/catalog/views/default/templates/index.html
-      - ./scotgov/catalog/templates/top-toolbar.html:/var/lib/jetty/webapps/geonetwork/catalog/templates/top-toolbar.html
-      - ./scotgov/catalog/templates/top-toolbar-accessible.html:/var/lib/jetty/webapps/geonetwork/catalog/templates/top-toolbar-accessible.html
+      #- ./scotgov/catalog/js/CatController.js:/usr/local/tomcat/webapps/geonetwork/catalog/js/CatController.js
+      - ./scotgov/catalog/views/default/templates/dtechtive.html:/usr/local/tomcat/webapps/geonetwork/catalog/views/default/templates/dtechtive.html
+      - ./scotgov/catalog/views/default/templates/index.html:/usr/local/tomcat/webapps/geonetwork/catalog/views/default/templates/index.html
+      - ./scotgov/catalog/templates/top-toolbar.html:/usr/local/tomcat/webapps/geonetwork/catalog/templates/top-toolbar.html
+      - ./scotgov/catalog/templates/top-toolbar-accessible.html:/usr/local/tomcat/webapps/geonetwork/catalog/templates/top-toolbar-accessible.html
       # data quality snippets
-      - ../geonetwork-snippets/gemini23-index-fields/index-subtemplate.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.gemini23/index-fields/index-subtemplate.xsl
-      - ../geonetwork-snippets/iso19139-index-fields/index-subtemplate.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/index-fields/index-subtemplate.xsl  
+      - ../geonetwork-snippets/gemini23-index-fields/index-subtemplate.xsl:/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.gemini23/index-fields/index-subtemplate.xsl
+      - ../geonetwork-snippets/iso19139-index-fields/index-subtemplate.xsl:/usr/local/tomcat/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/index-fields/index-subtemplate.xsl  
       # group logo
-      - ./geonetwork/catalog/views/default/less/gn_search_default.less:/var/lib/jetty/webapps/geonetwork/catalog/views/default/less/gn_search_default.less
-      - ./geonetwork/catalog/components/utility/UtilityDirective.js:/var/lib/jetty/webapps/geonetwork/catalog/components/utility/UtilityDirective.js
-      - ./geonetwork/catalog/components/utility/partials/recordOriginLogo.html:/var/lib/jetty/webapps/geonetwork/catalog/components/utility/partials/recordOriginLogo.html
-      - ./geonetwork/catalog/views/default/templates/recordView/metadata.html:/var/lib/jetty/webapps/geonetwork/catalog/views/default/templates/recordView/metadata.html
-    
+      - ./geonetwork/catalog/views/default/less/gn_search_default.less:/usr/local/tomcat/webapps/geonetwork/catalog/views/default/less/gn_search_default.less
+      - ./geonetwork/catalog/components/utility/UtilityDirective.js:/usr/local/tomcat/webapps/geonetwork/catalog/components/utility/UtilityDirective.js
+      - ./geonetwork/catalog/components/utility/partials/recordOriginLogo.html:/usr/local/tomcat/webapps/geonetwork/catalog/components/utility/partials/recordOriginLogo.html
+      - ./geonetwork/catalog/views/default/templates/recordView/metadata.html:/usr/local/tomcat/webapps/geonetwork/catalog/views/default/templates/recordView/metadata.html
+      # general overrides for using non-local AWS OpenSearch
+      - ./geonetwork/WEB-INF/web.xml:/usr/local/tomcat/webapps/geonetwork/WEB-INF/web.xml
+      - ./geonetwork/WEB-INF/config.properties:/usr/local/tomcat/webapps/geonetwork/WEB-INF/config.properties
     networks:
       - esnet
 
