--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -143,12 +143,13 @@ services:
     container_name: nginx
     volumes:
           - ./nginx/default.local:/etc/nginx/conf.d/default.conf
-          - ./nginx/servers:/etc/ngifnx/servers
+          - ./nginx/servers:/etc/nginx/servers
           - ./nginx/locations:/etc/nginx/locations
           - ./nginx/root/robots.txt:/var/www/html/robots.txt
           - nginxlog:/var/log/nginx
     ports:
       - "80:80"
+      - "8443:8443"
     security_opt:
       - no-new-privileges=true
     logging:
@@ -161,6 +162,8 @@ services:
       timeout: 10s
       retries: 5
     restart: unless-stopped
+
+  
 
 networks:
   esnet:
