minor changes to ogc-api-records-service config to improve URLs built from environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -130,8 +130,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://${POSTGRES_DB_HOST}:${POSTGRES_DB_PORT}/${POSTGRES_DB_NAME}
       SPRING_DATASOURCE_USERNAME: ${POSTGRES_DB_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${POSTGRES_DB_PASSWORD}
-      GN_BASEURL: ${GN_PROTOCOL}://${GN_HOST}:${GN_PORT}/geonetwork/api
-      GN_LEGACY_URL: ${GN_PROTOCOL}://${GN_HOST}:${GN_PORT}/geonetwork
+      GN_BASEURL: ${GN_PROTOCOL}://${GN_URL}/geonetwork/api
+      GN_LEGACY_URL: ${GN_PROTOCOL}://${GN_URL}/geonetwork
       GN_INDEX_URL: ${ES_URL}
       SERVER_FORWARDHEADERSSTRATEGY: FRAMEWORK
 
